Changes in Submodel Output